K8s/OKE+Cilium/keycloak/keycloak-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
  namespace: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  serviceName: "keycloak-service"
  replicas: 1 
  template:
    metadata:
      labels:
        app: keycloak 
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.6
          args: ["start-dev"]
          resources:
            requests:
              cpu: 100m
              memory: 498Mi
            limits:
              cpu: 500m
              memory: 600Mi
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          volumeMounts:
          - name: keycloak-pvc
            mountPath: /opt/keycloak/data/h2
  volumeClaimTemplates:
  - metadata:
      name: keycloak-pvc
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: "nfs-csi"
      resources:
        requests:
          storage: 3Gi
---
apiVersion: v1
kind: Service
metadata:
  namespace: keycloak
  name: keycloak-service
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
