K8s/OKE+Cilium/keycloak/keycloak-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: keycloak
  name: keycloak-service
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
