K8s/OKE+Cilium/keycloak/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: keycloak
  name: keycloak-service
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:25.0.6
          args: ["start-dev"]
          resources:
            requests:
              cpu: 100m
              memory: 498Mi
            limits:
              cpu: 500m
              memory: 600Mi
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
          volumeMounts:
          - name: keycloak-pvc
            mountPath: /opt/keycloak/data/h2
      volumes:
          - name: keycloak-pvc
            persistentVolumeClaim:
              claimName: keycloak-pvc
