K8s/OKE+Cilium/keycloak/keycloak-route.yaml
# Keycloak
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak
spec:
  parentRefs:
  - name: cilium-gw # gateway name
    namespace: gateway
  hostnames:
  - "sso.z3cyber.pro"
  rules:
  - backendRefs:
    - name: keycloak-service
      port: 80
